pset5 up to prob7

--- a/Pset 5/Pset_5.ipynb
+++ b/Pset 5/Pset_5.ipynb
@@ -192,6 +192,107 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Problems 5-6\n",
+    "\n",
+    "### Answers: [d] $10$ ,  [e] $[0.045,0.024]$\n",
+    "\n",
+    "### Code:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After 10 iterations, we found a minimum of the function at [0.045,0.024] with error value of 1.21e-15\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math as m\n",
+    "\n",
+    "def E(w):\n",
+    "    u=w[0]\n",
+    "    v=w[1]\n",
+    "    return np.double((u*m.e**v - 2*v*m.e**(-u))**2)\n",
+    "\n",
+    "def gradE(w):\n",
+    "    u=w[0]\n",
+    "    v=w[1]\n",
+    "    duE=np.double(2*(u*m.e**v-2*v*m.e**(-u))*(m.e**v+2*v*m.e**(-u)))\n",
+    "    dvE=np.double(2*(-2*m.e**(-u)+m.e**v*u)*(m.e**v*u - 2*m.e**(-u)*v))\n",
+    "    return np.array([duE,dvE])\n",
+    "\n",
+    "def grad_step(w,grad,eta):\n",
+    "    return w-eta*grad(w)\n",
+    "\n",
+    "def grad_desc(E,gradE,Emin,init,eta=0.1,print_ans=True):\n",
+    "    w=init\n",
+    "    Niter=0\n",
+    "    while(E(w)>Emin):\n",
+    "        w=grad_step(w,gradE,eta)\n",
+    "        Niter=Niter+1\n",
+    "    if(print_ans==True):\n",
+    "        print(f'After {Niter} iterations, we found a minimum of the function at [{w[0]:.3f},{w[1]:.3f}] with error value of {E(w):.2e}')\n",
+    "    return w,Niter\n",
+    "\n",
+    "eps=np.double(10**(-14))\n",
+    "startpt=np.array([1,1])\n",
+    "w,Niter=grad_desc(E,gradE,eps,startpt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Problem 7\n",
+    "\n",
+    "### Answer: [a] $10^{-1}$\n",
+    "\n",
+    "### Code:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After 15 iterations, we found a minimum of the function at [6.297,-2.852] with error value of 1.40e-01\n"
+     ]
+    }
+   ],
+   "source": [
+    "def grad_step_coord(w,gradE,eta):\n",
+    "    ustep=w[0]-eta*gradE(w)[0]\n",
+    "    w=np.array([ustep,w[1]],dtype=np.double)\n",
+    "    vstep=w[1]-eta*gradE(w)[1]\n",
+    "    return np.array([ustep,vstep],dtype=np.double)\n",
+    "\n",
+    "def grad_desc_coord(E,gradE,max_ite,init,eta=0.1,print_ans=True):\n",
+    "    w=init\n",
+    "    Niter=0\n",
+    "    while(Niter<max_ite):\n",
+    "        w=grad_step_coord(w,gradE,eta)\n",
+    "        Niter=Niter+1\n",
+    "    if(print_ans==True):\n",
+    "        print(f'After {Niter} iterations, we found a minimum of the function at [{w[0]:.3f},{w[1]:.3f}] with error value of {E(w):.2e}')\n",
+    "    return w,Niter\n",
+    "\n",
+    "w,Niter=grad_desc_coord(E,gradE,15,startpt)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
