pset5 up to prob9

--- a/Pset 2/Pset_2.ipynb
+++ b/Pset 2/Pset_2.ipynb
@@ -285,8 +285,7 @@
     "    pts=[[1,np.random.uniform(xleft,xright),np.random.uniform(yleft,yright)] for i in range(N)]\n",
     "    return np.array(pts)\n",
     "\n",
-    "def gen_line():\n",
-    "    x1,x2,y1,y2=np.random.uniform(-1,1),np.random.uniform(-1,1),np.random.uniform(-1,1),np.random.uniform(-1,1)\n",
+    "def gen_line(): x1,x2,y1,y2=np.random.uniform(-1,1),np.random.uniform(-1,1),np.random.uniform(-1,1),np.random.uniform(-1,1)\n",
     "    m=(y2-y1)/(x2-x1)\n",
     "    b=(y1*x2-y2*x1)/(x2-x1)\n",
     "    return m,b\n",
