Updates from Overleaf

--- a/TeX-files/Pset_5/Pset_5.tex
+++ b/TeX-files/Pset_5/Pset_5.tex
@@ -817,7 +817,7 @@ For the error function proposed {[}e{]}, the gradient is:
 \begin{equation}
  \nabla e_n(\mathbf{w})= -\nabla \left({\rm min}(0,y_n\mathbf{w}^T\mathbf{x}_n)\right)=
 \begin{cases}
-y_n\mathbf{x}_n & \text{for } y_n\mathbf{w}^T\mathbf{x}_n < 0\\
+-y_n\mathbf{x}_n & \text{for } y_n\mathbf{w}^T\mathbf{x}_n < 0\\
 0  & \text{for } y_n\mathbf{w}^T\mathbf{x}_n \ge 0
 \end{cases}
 \end{equation}
