Updates from Overleaf

--- a/TeX-files/Pset_6/Pset_6.tex
+++ b/TeX-files/Pset_6/Pset_6.tex
@@ -371,8 +371,8 @@
     \maketitle
     
 
-The following notebook is publicly available at the following
-\href{https://github.com/spatrone/CS156A-Caltech.git}{link}.
+The following notebook is publicly available
+\href{https://github.com/spatrone/CS156A-Caltech.git}{here}.
 
 \tableofcontents
 
